--- a/ahome.html
+++ b/ahome.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
  
     <title>Admin panel</title>
-
+www.linkdin.com
 
 </head>
 <style>
