--- a/ahome.html
+++ b/ahome.html
@@ -108,6 +108,7 @@ www.linkdin.com
 .our_team .team_member .member_img .social_media .fab {
   color: #8c7ae6;
   font-size: 20px;
+    www.bbc.com
 }
 
 .our_team .team_member .member_img:hover .social_media {
